--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
 <script type="text/javascript" src="lib/kotlin.js"></script>
 <script type="text/javascript" src="error-control.js"></script>
 
+<footer>Consulter le <a href="https://github.com/olybri/error-control">code source</a></footer>
+
 </body>
 </html>
